--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -44,6 +44,6 @@
       .inputBox
         %input{type:"text",class:"inputBox__text",placeholder:'type a message'}
         %label{class:"inputBox__image"}
-          =icon('fas','image')
+          =icon('far','image')
           %input{type:'file',class:'inputBox__image__file'}
       %input.chat_main__messageForm__send{type:'submit',value:"Send"}
