--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -43,7 +43,7 @@
     %form.chat_main__messageForm__newMessage
       .inputBox
         %input{type:"text",class:"inputBox__text",placeholder:'type a message'}
-        %label{class:"inputBox__image"}
+        %label.inputBox__image
           =icon('far','image')
           %input{type:'file',class:'inputBox__image__file'}
       %input.chat_main__messageForm__send{type:'submit',value:"Send"}
