--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,10 +2,10 @@
   .side_bar__user
     .side_bar__user__name_box
       .side_bar__user__name_box__user_name
-        masa
+        =current_user.name
       .side_bar__user__name_box__icons
         
-        = link_to "#",class:"side_bar__user__name_box__icons__edit" do
+        = link_to edit_user_path(current_user),class:"side_bar__user__name_box__icons__edit" do
           =icon("fas","edit", class:"side_bar__user__name_box__icons__edit")
           %span<>
           
