--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,48 +2,36 @@
   .chat_main__groupInfo
     .chat_main__groupInfo__leftHeader
       .chat_main__groupInfo__leftHeader__group_name
-        test
+        = @group.group
       %ul.chat_main__groupInfo__leftHeader__member
         Member : 
         %li.chat_main__groupInfo__leftHeader__member__name
-          masa
+          - @group.users.each do |user|
+            = user.name
     .chat_main__groupInfo__rightHeader
-      = link_to'Edit','#' 
-        
+      = link_to edit_group_path(@group.id) do
+        Edit
 
-  .chat_main__message_list
-    .chat_main__message_list__message
-      .chat_main__message_list__message__info
-        .chat_main__message_list__message__info__name
-          masa
-        .chat_main__message_list__message__info__timestamp
-          2020/06/07 16:49
-      .chat_main__message_list__message__text
-        Hello!!  
-    
-    .chat_main__message_list__message
-      .chat_main__message_list__message__info
-        .chat_main__message_list__message__info__name
-          masa
-        .chat_main__message_list__message__info__timestamp
-          2020/06/07 16:49
-      .chat_main__message_list__message__text
-        morning! 
+  .messages
+    = render @messages
 
-    .chat_main__message_list__message
-      .chat_main__message_list__message__info
-        .chat_main__message_list__message__info__name
-          masa
-        .chat_main__message_list__message__info__timestamp
-          2020/06/07 16:49
-      .chat_main__message_list__message__text
-        bye!!!
+
+  
+
+  -# .chat_main__messageForm
+  -#   =form_with model: [@group, @message], html: {class: "chat_main__messageForm__newMessage"}, local: true do |f|
+  -#     .inputBox
+  -#       = f.text_field :content, class: 'inputBox__text', placeholder: 'type a message'
+  -#       = f.label :image, class: 'inputBox__image' do
+  -#         =icon('far','image')
+  -#         = f.file_field :image, class: 'inputBox__image__file'
+  -#       = f.submit 'Send', class: 'chat_main__messageForm__send'
 
   .chat_main__messageForm
-    %form.chat_main__messageForm__newMessage
+    =form_with model: [@group, @message], html: {class: "chat_main__messageForm__newMessage"}, local: true do |f|
       .inputBox
-        %input{type:"text",class:"inputBox__text",placeholder:'type a message'}
-        %label.inputBox__image
-          =icon('far','image')
-          %input{type:'file',class:'inputBox__image__file'}
-      %input.chat_main__messageForm__send{type:'submit',value:"Send"}
+        = f.text_field :content, class: 'inputBox__text', placeholder: 'type a message'
+        = f.label :image, class: 'inputBox__image' do
+          =icon('fas','image')
+          = f.file_field :image, class: 'inputBox__image__file'
+      = f.submit 'Send', class: 'chat_main__messageForm__send'
