--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.chat_main__message_list
+.chat_main__message_list{data: {message: {id: message.id}}}
   .chat_main__message_list__message
     .chat_main__message_list__message__info
       .chat_main__message_list__message__info__name
